# snake_rust

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml  continous-integration.yaml
src/: components.rs  food.rs  game.rs  grid.rs  main.rs  snake.rs
