[package]
name = "snake_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
rand = "0.7"
raw-window-handle = "0.4.3"

[dev-dependencies]
proptest = "1.0.0"
